fixed background problem

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -9,7 +9,7 @@ body{
 .header {
 
     min-height: 100vh;
-    background: url(/img/nav-menu/background.png) 100% no-repeat;
+    background: url(img/nav-menu/background.png) 100% no-repeat;
     background-size: cover;
     font-family: Inter;
 
