--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -95,7 +95,7 @@ body {
 
 .header {
   min-height: 100vh;
-  background: url(/img/nav-menu/background.png) 100% no-repeat;
+  background: url(img/nav-menu/background.png) 100% no-repeat;
   background-size: cover;
   font-family: Inter;
 }
